fixed project label width on small screens

--- a/styles/ProjectPanel.module.scss
+++ b/styles/ProjectPanel.module.scss
@@ -99,7 +99,7 @@
 @media (max-width: 500px) {
   .projectPanel {
     .projectInfo {
-      max-width: 180px;
+      max-width: 170px;
 
       h3 {
         font-size: 1.6rem;
